--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,63 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".views.navigation.HomeActivity">
 
-    <!--AppBarLayout helps the toolbar and other components to react on
-        scroll changes. I am using Dark theme for AppBarLayout.
-        Inside this AppBarLayout i
-        have used CollapsingToolbarLayout. -->
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_marginHorizontal="24dp">
 
-        <!-- In CollapsingToolbarLayout some important attributes are:
-         i)  app:layout_scrollFlags which is used to specify how collapsing
-             layout behaves when content is scrolled.I have used
-             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-             so it will scroll until it's is completely collapsed.
-         ii) app:contentScrim="@color/green" that specifies the color
-              of the collapsed toolbar -->
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/toolbar"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/header_user"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/ic_user"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:contentDescription="@string/profile"
+                android:src="@drawable/ic_user"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@+id/tv_greeting"
+                app:layout_constraintStart_toEndOf="@id/ic_user"
+                app:layout_constraintTop_toTopOf="@id/ic_user"
+                tools:text="Hello, John" />
+
+            <TextView
+                android:id="@+id/tv_greeting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/great_day_to_control_your_calories"
+                app:layout_constraintBottom_toBottomOf="@id/ic_user"
+                app:layout_constraintStart_toEndOf="@id/ic_user"
+                app:layout_constraintTop_toBottomOf="@id/tv_user_name" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View
+            android:id="@+id/v_statistic"
+            android:layout_width="match_parent"
+            android:layout_height="128dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/rounded_corner_shape"
+            android:backgroundTint="#f00"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/header_user" />
+
+        <TextView
+            android:id="@+id/tv_food_recommendation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/we_ve_picked_you_a_delicious_food"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/v_statistic" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_food_recomm"
+            android:layout_width="match_parent"
+            android:layout_height="128dp"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_food_recommendation"
+            tools:listitem="@layout/recommendation_item" />
+
+        <TextView
+            android:id="@+id/tv_recipe_recommendation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/we_also_have_recipe_for_you"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rv_food_recomm" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_recipe_recomm"
+            android:layout_width="match_parent"
+            android:layout_height="128dp"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_recipe_recommendation"
+            tools:listitem="@layout/recommendation_item" />
+
+        <TextView
+            android:id="@+id/text_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/latest_blog_posts"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rv_recipe_recomm" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_latest_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:contentScrim="#bf2758"
-            app:expandedTitleGravity="center_vertical"
-            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
-            app:title="@string/app_name">
+            android:layout_marginTop="16dp"
+            android:nestedScrollingEnabled="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_home"
+            tools:listitem="@layout/item_latest_post" />
 
-            <!--We are adding the image that we have added earlier
-                  in the drawable folder.The attribute app:layout_collapseMode="parallax"
-                  causes the image to move when user scrolls at a specific ratio. -->
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="#bf2758"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!-- The attribute app:layout_collapseMode="pin" is set so that
-                 sticks to the top when the user scrolls the view up-->
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/collapsed_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <include
-        android:id="@+id/include_content_home"
-        layout="@layout/content_home_fragment" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</ScrollView>
