--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -10,16 +10,22 @@
         android:id="@+id/viewFinder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        />
 
     <View
         android:id="@+id/btn_capture"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/circle"
         app:layout_constraintBottom_toBottomOf="@id/viewFinder"
         app:layout_constraintEnd_toEndOf="@id/viewFinder"
@@ -27,26 +33,26 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_retake"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Retake"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/btn_capture"
-        app:layout_constraintEnd_toStartOf="@id/btn_next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_capture"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btn_capture"
+        app:layout_constraintTop_toBottomOf="@+id/viewFinder"
         tools:visibility="visible" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_next"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Save To My Eating"
+        android:text="Save"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/btn_capture"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btn_retake"
-        app:layout_constraintTop_toTopOf="@id/btn_capture"
+        app:layout_constraintStart_toEndOf="@+id/btn_capture"
+        app:layout_constraintTop_toBottomOf="@+id/viewFinder"
         tools:visibility="visible" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -54,6 +60,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent=".50" />
+        app:layout_constraintGuide_begin="215dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
