--- a/app/src/main/res/layout/fragment_privacy.xml
+++ b/app/src/main/res/layout/fragment_privacy.xml
@@ -32,14 +32,16 @@
 
         <TextView
             style="@style/TextAppearance.Material3.BodySmall"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="80dp"
-            android:text="lorem ipsum"
+            android:text="@string/privacy_policy_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_headline"
-            tools:text="@tools:sample/lorem/random" />
+            android:justificationMode="inter_word"
+             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
