--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,12 +5,13 @@
     android:id="@+id/nav_notif"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="24dp"
     tools:context=".views.navigation.profile.ProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="24dp"
+        android:paddingBottom="16dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/img_profile"
@@ -32,10 +33,10 @@
             style="@style/Theme.NutriCatch.TextStyle.Headline.Medium.Bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_8"
             android:text="@string/text_placeholder"
             android:textAlignment="center"
             android:textSize="20sp"
-            android:layout_marginTop="@dimen/margin_8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_profile" />
@@ -44,19 +45,19 @@
             android:id="@+id/tv_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_8"
             android:text="@string/text_placeholder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_name"
-            tools:text="contact@nutricatch.id"
-            android:layout_marginTop="@dimen/margin_8"/>
+            tools:text="contact@nutricatch.id" />
 
         <TextView
             android:id="@+id/textView7"
             style="@style/Theme.NutriCatch.TextStyle.Headline.Small"
+            android:layout_marginTop="@dimen/margin_16"
             android:text="@string/account"
             android:textStyle="bold"
-            android:layout_marginTop="@dimen/margin_16"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_email" />
 
@@ -84,7 +85,7 @@
                 android:id="@+id/tv_weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:text="@string/my_weight"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/img_weight_icon"
