--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -146,7 +146,11 @@
         android:id="@+id/registerFragment"
         android:name="com.nutricatch.dev.views.navigation.auth.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" />
+        tools:layout="@layout/fragment_register" >
+        <action
+            android:id="@+id/action_registerFragment_to_navigation_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
     <activity
         android:id="@+id/appCheckActivity"
         android:name="com.nutricatch.dev.views.app_check.AppCheckActivity"
